--- a/sign up/sign up.html
+++ b/sign up/sign up.html
@@ -6,12 +6,12 @@
     <title>Document</title>
 </head>
 <body bgcolor="green">
-    <form action="process php" method="post">
-        <label for="first name">first name</label>
+    </html> <form action="process php" method="post">
+c<label for="first name">first name</label>
         <input type="text" placeholder="enter first name">
         <br> <br>
         <form action="process php" method="post">
-            <label for="middle name">middle name</label>
+            <label for="middle name">mid
             <input type="text" placeholder="enter midle name">
             <br> <br>
             <form action="process php" method="post">
@@ -28,8 +28,7 @@
                  <div>
                     <label for="gender">gender</label>
                     <select name="gender" id="">
-                        <option value="male">male</option>
-                        <option value="female">female</option>
+                        <option value="male">male</option> "female">female</option>
                         <option value="ohers">Others</option>
                     </select>
                  </div>
@@ -49,4 +48,3 @@
                  </div>
     </form>
 </body>
-</html>
