--- a/index.html
+++ b/index.html
@@ -4,31 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M4ACE</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body bgcolor="gold ">
-   <H1>WELCOME TO MK'S POT</H1> <HR></HR>
+<body>
+   <H1>WELCOME TO <span class="POT">MK'S POT</span></H1> 
    <H1>WE SERVE AFFORDABLE MEALS </H1>
-    <img src="" alt="">
-    <a href="./store.html">fashion store</a>
     <h2>types of nigerian dishes</h2>
     <list>
-        <ol>
+        <ol class="box-1">
             <li>rice</li>
             <li>beans</li>
             <li>garri</li>
             <li>moimoi</li>
         </ol>
         <h2>types of intercontinential dishes</h2>
-        <ul>
+        <ul class="pro">
             <li>fried rice</li>
             <li>salad</li>
             <li>smoothie</li>
             <li>sandwitches</li>
         </ul>
     </list>
-    <div>
-        <img src="samples.jpg" alt="pancakes" title="food">
-    </div>
-    <h2>sign up here <a href="./sign up/sign up.html">sign up</a></h2>
+    <h2 class="pri">sign up here <a href="./sign up/sign up.html" class="pru">sign up</a></h2>
 </body>
 </html>
