--- a/sign up/sign up.html
+++ b/sign up/sign up.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body bgcolor="green">
+<body class="sign up">
     </html> <form action="process php" method="post">
 c<label for="first name">first name</label>
         <input type="text" placeholder="enter first name">
